Fixed some issues with text overflowing tooltip box

--- a/css/ppg.css
+++ b/css/ppg.css
@@ -16,10 +16,11 @@
 }
 
 div.tooltip {   
+  align: center;
   position: absolute;           
   text-align: center;           
-  width: 50px;                  
-  height: 20px;                 
+  width: 60px;                  
+  height: 25px;                 
   padding: 2px;             
   font-size: 9px;        
   background: lightsteelblue;   
